@@ -15,7 +15,6 @@ import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
 
-
 import java.util.*;
 
 /*
@@ -97,6 +96,35 @@ public class Centaur extends StdRace
 	public boolean useRideClass()
 	{
 		return true;
+	}
+
+	private final String[]	racialAbilityNames			= { "Skill_Buck" };
+	private final int[]		racialAbilityLevels			= { 5 };
+	private final int[]		racialAbilityProficiencies	= { 50 };
+	private final boolean[]	racialAbilityQuals			= { false };
+
+	@Override
+	public String[] racialAbilityNames()
+	{
+		return racialAbilityNames;
+	}
+
+	@Override
+	public int[] racialAbilityLevels()
+	{
+		return racialAbilityLevels;
+	}
+
+	@Override
+	public int[] racialAbilityProficiencies()
+	{
+		return racialAbilityProficiencies;
+	}
+
+	@Override
+	public boolean[] racialAbilityQuals()
+	{
+		return racialAbilityQuals;
 	}
 
 	private final String[]	culturalAbilityNames			= { "Elvish", "Foraging" };
