@@ -92,10 +92,10 @@ public class Dragon extends StdRace
 		return localizedStaticRacialCat;
 	}
 
-	private final String[]	racialAbilityNames			= { "Dragonbreath", "WingFlying" };
-	private final int[]		racialAbilityLevels			= { 5, 1 };
-	private final int[]		racialAbilityProficiencies	= { 100, 100 };
-	private final boolean[]	racialAbilityQuals			= { false, false };
+	private final String[]	racialAbilityNames			= { "Dragonbreath", "WingFlying", "Skill_Buck" };
+	private final int[]		racialAbilityLevels			= { 5, 1, 1 };
+	private final int[]		racialAbilityProficiencies	= { 100, 100, 100 };
+	private final boolean[]	racialAbilityQuals			= { false, false, false };
 
 	@Override
 	protected String[] racialAbilityNames()
