@@ -253,6 +253,12 @@ Example  : bribe orc sleep\n\r\
 The thief will attempt to use money to get a target to do \
 something for him or her.  
 
+BUCK=<ABILITY>\
+Usage    : BUCK\n\r\
+Example  : buck\n\r\
+The centaur, horse or other rideable attempts to buck off all his or \
+her riders off of them.
+
 BUFFOONERY=<ABILITY>\
 Usage    : BUFFOONERY [TARGET NAME] [ITEM NAME]\n\r\
 Example  : buffoonery orc banana\n\r\
