@@ -13,6 +13,7 @@
   12. New Spell: Spell_Planeshift, for going to other planes of existence
   13. Prop_AbsorbDamage has several new parameters, and can now effect rooms/areas
   14. Clerics and Druids also get planar travelling spells: Plane Walking and Planar Travel
+  15. New racial ability for horse-like races: Buck
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
